# LLM-ATC-HAL

./: .gitattributes  .gitignore  BLUESKY_INTEGRATION.md  BLUESKY_INTEGRATION_SUMMARY.md  BLUESKY_TOOLS_EXTENSION_SUMMARY.md  CLEANUP_SUMMARY.md  CLI_ENHANCEMENTS_SUMMARY.md  CODE_REVIEW_IMPLEMENTATION.md  FAISS_TO_MILVUS_MIGRATION.md  FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LLM_PROMPT_ENGINE_IMPROVEMENTS.md  MONTE_CARLO_ANALYSIS_IMPLEMENTATION.md  README.md  README_new.md  README_old.md  SCENARIO_GENERATOR_IMPLEMENTATION.md  SUCCESS_SUMMARY.md  TASK1_IMPLEMENTATION_SUMMARY.md  analyze_dependencies.py  analyze_model_comparison.py  analyze_training_data.py  bluesky_config.yaml  bluesky_integration_demo.py  bluesky_tools_documentation.py  cleanup_summary.json  cleanup_summary.md  cli.py  combine_and_train_ollama.py  compare_model_performance.py  comprehensive_hallucination_tester_v2.py  comprehensive_test_config.yaml  create_test_config.py  debug_parameter_analysis.py  deficiency_check.py  deficiency_check_fixed.py  deleted_files_report.md  demo_embodied_agents.py  demo_enhanced_vertical.py  (+36 more)
.github/workflows/: ci.yml
BSKY_GYM_LLM/: .gitignore  INTEGRATION_SUCCESS_REPORT.md  README.md  check_fine_tuning_status.py  explain_lora_size.py  merge_lora_and_convert.py  quick_check.py  regenerate_training_curves.py  requirements.txt  test_enhanced_model.py  train_combined_lora.py  train_lora.py  training_summary.py  verify_finetuning.py  verify_model.py
BSKY_GYM_LLM/Bsky_gym_Trained_Models/: README.md
BSKY_GYM_LLM/config/: README.md  training_config.yaml
BSKY_GYM_LLM/data/: README.md  combination_stats.json  data_quality_report.json  gym_distill.jsonl
BSKY_GYM_LLM/scripts/: FINE_TUNING_SUMMARY.md  INTEGRATION_GUIDE.md  data_processor.py  evaluation.py  final_cleanup.py  fine_tune_ollama.py  model_integration.py  setup.py  standardized_training_generator.py
Bsky_SAC_Finetuned/: PERFORMANCE_GUIDE.md  README.md  README_ENHANCED.md  SETUP_COMPLETE.md  bluesky_gym_setup.py  check_flash_attention.py  fix_emojis.py  monitor_training.py  register_environments.py  requirements.txt  run_training.py  setup.py  test_gpu_performance.py  test_performance.py  test_setup.py
Bsky_SAC_Finetuned/config/: fast_training_config.yaml  training_config.yaml
Bsky_SAC_Finetuned/configs/: horizontal_config.yaml  merge_config.yaml  sector_config.yaml  synonym_variants.yaml  vertical_config.yaml
Bsky_SAC_Finetuned/data/: enhanced_data_quality_report.json  test_set.json
Bsky_SAC_Finetuned/scripts/: finetune_llama.py  generate_training_data.py  horizontal_validation_report.json  test_models.py  validate_training_data.py  validation_report.json
Bsky_SAC_Finetuned/templates/: __init__.py  base_template.py  template_factory.py  vertical_template.py
Bsky_SAC_Finetuned/training/: train_enhanced_sac_lora.py  train_fast_sac_lora.py
SCAT_Analysis/: scat_comprehensive_eda.ipynb  seasonal_baselines.json  traffic_pattern_analysis.json  traffic_regimes.json  weekly_baselines.json
agents/: controller_interface.py  planner.py  scratchpad.py  verifier.py
analysis/: README.md  enhanced_hallucination_detection.py  extract_and_analyze.py  hallucination_taxonomy.py  metrics.py  visualisation.py
bluesky_sim/: scenarios.py  simulation_runner.py
config/: enhanced_parameters.yaml
data/: enhanced_data_quality_report.json
debug_plots/: parameter_analysis_summary.csv
debug_sweep_output/: all_results.jsonl  altitude_vertical_rate_fpm=-2000.000.jsonl  altitude_vertical_rate_fpm=0.000.jsonl  altitude_vertical_rate_fpm=2000.000.jsonl  speed_cruise_speed_variation=-30.000.jsonl  speed_cruise_speed_variation=10.000.jsonl  speed_cruise_speed_variation=50.000.jsonl  speed_mach_range=0.740.jsonl  speed_mach_range=0.795.jsonl  speed_mach_range=0.850.jsonl
docs/: LLM_PROMPT_ENGINE.md  performance_report.txt
examples/: llm_prompt_engine_integration.py  scenario_generator_integration.py
experiments/: distribution_shift_runner.py
llm_atc/: README.md  __init__.py  cli.py  cli_validation_fix.py
llm_atc/agents/: README.md  (+5 more)
llm_interface/: README.md  ensemble.py  filter_sort.py  llm_client.py  prompts.py
memory/: experience_document_generator_old.py  experience_integrator.py  replay_store.py  replay_store_new.py  replay_store_old.py
metrics/: __init__.py  safety_margin_quantifier.py
monte_carlo_analysis/: aggregated_metrics.json
param_sweep/: altitude_vertical_rate_fpm=-2000.000.jsonl  altitude_vertical_rate_fpm=0.000.jsonl  altitude_vertical_rate_fpm=2000.000.jsonl  safety_horizontal_separation_nm=3.000.jsonl  safety_horizontal_separation_nm=5.500.jsonl  safety_horizontal_separation_nm=8.000.jsonl  simulation_duration_minutes=10.000.jsonl  simulation_duration_minutes=15.000.jsonl  simulation_duration_minutes=5.000.jsonl  streaming_results.jsonl  summary.csv  traffic_density_multiplier=0.300.jsonl  traffic_density_multiplier=1.150.jsonl  traffic_density_multiplier=2.000.jsonl
repository_analysis/: analysis_data.json  analysis_summary.md
scenarios/: README.md  README_scenario_generator.md  __init__.py  demo_scenario_generator.py  monte_carlo_framework.py  monte_carlo_runner.py  scenario_generator.py
scripts/: cleanup_refactor.ps1  cleanup_refactor.sh  cleanup_refactor_clean.ps1  final_verification.ps1  reembed_vectors.py  reembed_vectors_task2.py  sanity_run.ps1  sanity_run.sh
solver/: __init__.py  conflict_solver.py
testing/: __init__.py  result_analyzer.py  result_streamer.py  scenario_manager.py  test_executor.py
testing_data/: generation_statistics.json  sector_cr_samples.json
tests/: test_agents.py  test_agents_simple.py  test_baseline.py  test_cli_monte_carlo.py  test_cli_monte_carlo_simple.py  test_memory.py  test_memory_simple.py  test_memory_task2.py  test_modules.py  test_monte_carlo_analysis.py  test_scenario_generator.py  test_scenario_generator_enhanced.py  test_scenario_generator_simple.py  test_scenario_generator_validation.py  validate_monte_carlo.py
tools/: __init__.py
training_data/: generation_statistics.json
validation/: __init__.py  input_validator.py
(+47 files in other folders)
